fix(theme): constrain ralphex-logo size to prevent text overlap
add max-width to floated ralphex-logo image to fix layout race condition
where shape-outside recalculation fails before image dimensions are known

--- a/themes/hyde-hyde/assets/scss/hyde-hyde/_base.scss
+++ b/themes/hyde-hyde/assets/scss/hyde-hyde/_base.scss
@@ -152,6 +152,7 @@ img[src$='#floatright'] {
 }
 
 img[src*='ralphex-logo'][src$='#floatright'] {
+	max-width: 150px;
 	shape-outside: circle(50%);
 }
 
